# ibsim_control_panel

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/ibsim_control_panel/: __init__.py  __main__.py  app.py  constants.py  topology.py
src/ibsim_control_panel/defaults/: __init__.py  net  opensm.conf
src/ibsim_control_panel/static/css/: styles.css
src/ibsim_control_panel/static/js/: cytoscape_init.js
src/ibsim_shell/: __init__.py  cli.py
tests/ibsim_control_panel/: test_app_utils.py  test_topology.py
tests/ibsim_shell/: test_cli.py
