[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "ibsim_control_panel"
version         = "0.0.1"
description     = "Control Panel for IBsim utility"
readme          = "README.md"
requires-python = ">=3.12,<4.0"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "nicegui==3.6.1",
    "questionary==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "responses==0.25.8",
    "black==26.1.0",
    "ruff==0.14.14",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
ibsim_control_panel = "ibsim_control_panel.__main__:main"
ibsim-connect = "ibsim_shell.cli:main"

# --------------------------------------------------
# setuptools-specific configuration
# --------------------------------------------------
[tool.setuptools]
package-dir          = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ibsim_control_panel", "ibsim_control_panel.*", "ibsim_shell", "ibsim_shell.*"]

[tool.setuptools.package-data]
ibsim_control_panel = ["defaults/*", "static/**/*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# Selecting rule categories to enforce
lint.select = [
    "E",   # PEP8 errors
    "F",   # PyFlake errors
    "W",   # PEP8 Warnings
    "C90", # McCabe complexity
    "B",   # Bugbear
    "D",   # Docstring conventions
]

# Ignore specific rules
lint.ignore = [
    "E203", # Whitespace before ':', conflicts with black
    "E266", # Too many leading '#' for block comment
    "E501", # Line too long (handled by line-length setting)
    "D107", # Missing docstring in __init__
    "D417", # Required for Google docstring convention
]

# Enable autofix for specific rules
lint.fixable = [
    "E", # PEP8 errors
    "F", # PyFlake Errors
    "W", # PEP8 warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"
